--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,28 +1,19 @@
 /*contacto */
 .contacto__form {
-    background-color: black;
-    opacity: 0.4;
+    background-color: darkgrey;
     color: white;
     border-radius: 0.5em;
     line-height: 2em;
     padding: 0.3em;
     text-transform: uppercase;
-
+    font-size: 0.9em;
 }
-
+label {
+    padding: 0.5em;
+    width: 7em;
+}
 .contacto__input {
-    
     width: 20em;
-    padding: 0.1em;       
-}
-.contacto__input--correo {
-    width: 20em;
-    
-    
-}
-.contacto__input--consulta {
-    width: 20.5em;
-
 }
 .contacto__btn {
     background-color: $importantText;
@@ -34,7 +25,6 @@
     font-weight: 600;
     margin-left: 3.5em;
 }
-
 .contacto__text {
     color: white;
     font-size: 1.5em;
@@ -48,42 +38,35 @@
     font-family: "Source Sans Pro", sans-serif;
     font-weight: 600;
     background-color: rgb(246, 240, 240);
-    width: 20em;
+    width: 24em;
     margin-left: 0.5em;
-          
-
+    margin-right: 0.5em;
 }
 .contacto__redes a{
     text-decoration: none;
     color: $importantText;
+    text-shadow: 2px 2px 5px rgb(128, 124, 124);
     margin: 0.4em;
-    padding: 0.5em; 
-   
+    padding: 0.5em;  
 }
-
-
 .contacto__redes--title {
     text-transform: uppercase;
     color: $importantText;
-    
+    text-shadow: 2px 2px 2px rgb(128, 124, 124);   
 }
 .contacto__redes--text {
     margin-left: 2.5em;
-    padding-bottom: 1em;
-    
+    padding-bottom: 1em;  
+    color: white; 
+    text-shadow: 2px 2px 2px rgb(95, 92, 92);  
 }
 
 @media(min-width:700px) {
 .contacto__form {
-    background-color: black;
-    opacity: 0.4;
-    color: white;
-    border-radius: 0.5em;
     padding: 2em;
     margin: 3em;
     margin-left: 6em;
     text-align: left;
-    text-transform: uppercase;
     font-weight: 700;
     line-height: 2em;
 }
@@ -93,70 +76,24 @@
 .contacto__item{
     margin: 1em;
 }
-
 .contacto__input {
     margin: 0.5em;
     width: 20em;
     padding: 0.1em;       
 }
-.contacto__input--correo {
-    width: 25em;
-    margin-top: 5em;
-    margin: 0;
-    height: 2em;
-    padding: 1em;
-
-}
-.contacto__input--consulta {
-    width: 25em;
-
-}
-
 .contacto__btn {
-    margin-left: 8em;
-    background-color: $importantText;
-    color: white;
-    border-radius: 1em;
-    border: none;
-    padding: 1em;
-    text-transform: uppercase;
-    font-weight: 600;
+    margin-left: 8em;  
 }
 .contacto__text {
-    color: white;
-    font-size: 3em;
-    font-weight: 500;
-    font-family: "Source Sans Pro", sans-serif;
+    font-size: 2em;
     margin-top: 2em; 
-    text-shadow: 2px 2px 5px black;
 }
 .contacto__redes {
-    list-style: none;
-        font-family: "Source Sans Pro", sans-serif;
-        font-weight: 600;
-        background-color: rgb(246, 240, 240);
-        width: 20em;
-        margin-left: 10em;
-          
-
-}
-.contacto__redes a{
-    text-decoration: none;
-    color: $importantText;
-    margin: 0.4em;
-    padding: 0.5em; 
-   
-}
-
-
-.contacto__redes--title {
-    text-transform: uppercase;
-    color:$importantText;
-    
+    width: 24em;
+    margin-left: 7em;
 }
 .contacto__redes--text {
     margin-left: 2.5em;
-    padding-bottom: 1em;
-    
+    padding-bottom: 1em;   
 }
 }
