--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -7,6 +7,7 @@
     padding: 0.3em;
     text-transform: uppercase;
     font-size: 0.9em;
+    
 }
 label {
     padding: 0.5em;
@@ -23,7 +24,8 @@ label {
     padding: 1em;
     text-transform: uppercase;
     font-weight: 600;
-    margin-left: 3.5em;
+    display: block;
+    margin: 0 auto;
 }
 .contacto__text {
     color: white;
@@ -69,6 +71,7 @@ label {
     text-align: left;
     font-weight: 700;
     line-height: 2em;
+    
 }
 .contacto__formtitle {
     font-size: 2em;
