--- a/scss/_headerfooter.scss
+++ b/scss/_headerfooter.scss
@@ -23,6 +23,9 @@
   padding: 0.3em;
   margin-bottom: 1em;
 }
+.navbar-nav li:hover {
+  color: white!important;
+}
 
 .header__btn:hover {
   transform: scale(1.20);
@@ -52,8 +55,7 @@
 .navbar-toggler {
   width: 10em;
   align-self: center;
-  margin: 1em;
-  margin-left: 4em;
+  margin: 10px auto;
 }
 
 .navbar-collapse {
@@ -78,12 +80,10 @@ header {
 .navbar-nav li a {
   margin:0.2em;
 }
-.navbar-nav li:hover {
-  color:white;
-}
+
 .navbar-nav li a:hover {
   background-color: rgb(245, 230, 95);
-  color: white;
+  color: white!important;
   border-radius: 0.5em;
   font-weight: 500;
 }
