--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@ h4 {
   text-shadow: 1px 1px 2px black; }
 
 /*HEADER MOBILE*/
+* {
+  padding: 0;
+  margin: 0; }
+
 .header__logo {
   height: 7em;
   width: 15em; }
@@ -96,15 +100,19 @@ footer {
 
 footer .footer__item {
   font-size: 0.8em;
-  margin-top: 1em;
+  margin-top: 2em;
   text-align: center;
   text-transform: uppercase;
   font-family: "Lato", sans-serif;
   font-weight: bolder; }
 
+.footer__item--links {
+  padding: 0px; }
+
 footer .footer__item--links li {
   list-style: none;
-  line-height: 2.6em; }
+  line-height: 2.4em;
+  list-style-position: unset; }
 
 footer .footer__item--links li a {
   text-decoration: none;
@@ -119,6 +127,9 @@ footer .fa-twitter, footer .fa-instagram, footer .fa-linkedin, footer .fa-facebo
   text-decoration: none;
   color: black;
   margin: 1em; }
+
+.map {
+  margin-bottom: 1.5em; }
 
 /*INDEX CAROUSEL MOBILE & ESCRITORIO*/
 .carousel-item {
