modificacion logo mobile

--- a/scss/_headerfooter.scss
+++ b/scss/_headerfooter.scss
@@ -1,13 +1,11 @@
 /*HEADER MOBILE*/
-
-*
-{
+* {
   padding: 0;
   margin: 0;
 }
 .header__logo {
   height: 10em;
-  width: 18.5em; 
+  width: 30em; 
 }
 .header__consulta {
   text-transform: uppercase;
