--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ h4 {
 
 .header__logo {
   height: 10em;
-  width: 30em; }
+  width: 18.5em; }
 
 .header__consulta {
   text-transform: uppercase;
@@ -177,6 +177,7 @@ footer .fa-twitter, footer .fa-instagram, footer .fa-linkedin, footer .fa-facebo
   font-family: "Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px #494545;
   text-transform: uppercase;
+  font-size: 1em;
   margin: 0;
   padding: 0; }
 
@@ -184,6 +185,7 @@ footer .fa-twitter, footer .fa-instagram, footer .fa-linkedin, footer .fa-facebo
   font-family: "Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px #494545;
   text-transform: uppercase;
+  font-size: 1em;
   font-weight: 600; }
 
 h1 {
