--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -45,6 +45,7 @@
   font-family:"Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
   text-transform: uppercase;
+  font-size: 1em;
   margin: 0;
   padding: 0;
 }
@@ -53,8 +54,10 @@
   font-family:"Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
   text-transform: uppercase;
+  font-size: 1em;
   font-weight: 600;
 }
+
 
 h1 {
   font-family:"Source Sans Pro", sans-serif;
