--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -45,7 +45,7 @@
   font-family:"Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 1.6em;
   margin: 0;
   padding: 0;
 }
@@ -54,11 +54,18 @@
   font-family:"Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 1.6em;
   font-weight: 600;
 }
 
-
+p {
+  font-size: 0.7em;
+}
+h5 {
+  font-family:"Source Serif Pro", sans-serif;
+  text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
+  text-transform: uppercase;
+}
 h1 {
   font-family:"Source Sans Pro", sans-serif;
   text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
