--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ h4 {
 
 .header__logo {
   height: 10em;
-  width: 18em; }
+  width: 18.5em; }
 
 .header__consulta {
   text-transform: uppercase;
@@ -177,7 +177,7 @@ footer .fa-twitter, footer .fa-instagram, footer .fa-linkedin, footer .fa-facebo
   font-family: "Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px #494545;
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 1.3em;
   margin: 0;
   padding: 0; }
 
@@ -185,7 +185,7 @@ footer .fa-twitter, footer .fa-instagram, footer .fa-linkedin, footer .fa-facebo
   font-family: "Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px #494545;
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 1.3em;
   font-weight: 600; }
 
 p {
@@ -287,11 +287,14 @@ h6 {
   opacity: 0.5;
   position: absolute; }
 
-.aboutUs__text {
+.aboutUs__textarea {
   height: 20em;
   background-color: #fcf8f8;
   padding: 4em;
   font-family: "lato"; }
+
+.aboutUs__text {
+  font-size: 1em; }
 
 /*numbers */
 .numbers {
@@ -307,7 +310,7 @@ h6 {
 
 .numbers__text {
   font-family: "Lato";
-  font-size: 3em;
+  font-size: 1.5em;
   font-weight: 600; }
 
 .numbers__title {
@@ -321,7 +324,15 @@ h6 {
   text-align: left;
   align-content: center;
   padding-left: 3em;
-  margin: 3em; }
+  margin: 2em; }
+
+@media (min-width: 700px) {
+  .numbers__text {
+    font-family: "Lato";
+    font-size: 3em;
+    font-weight: 600; }
+  .numbers__item {
+    margin: 3em; } }
 
 /*contacto */
 .contacto__form {
