--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,9 @@ h4 {
 
 .header__logo {
   height: 10em;
-  width: 18.5em; }
+  width: 20em;
+  margin: 0;
+  padding: 0; }
 
 .header__consulta {
   text-transform: uppercase;
@@ -62,7 +64,9 @@ h4 {
 .navbar-toggler {
   width: 10em;
   align-self: center;
-  margin: 10px auto; }
+  margin: 10px auto;
+  margin-top: 0;
+  padding: 0; }
 
 .navbar-collapse {
   text-align: center; }
