agregar alt y section

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ footer .fa-twitter, footer .fa-instagram, footer .fa-linkedin, footer .fa-facebo
   background-position: center;
   background-size: cover; }
 
-.carousel__text {
+.carousel__text--title {
   font-family: "Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px #494545;
   text-transform: uppercase;
@@ -192,13 +192,14 @@ footer .fa-twitter, footer .fa-instagram, footer .fa-linkedin, footer .fa-facebo
   font-size: 1.3em;
   font-weight: 600; }
 
-p {
+.carousel__text {
   font-size: 0.7em; }
 
 h5 {
   font-family: "Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px #494545;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-size: 2em; }
 
 h1 {
   font-family: "Source Sans Pro", sans-serif;
@@ -219,13 +220,15 @@ h6 {
 
 /*INDEX CAROUSEL ESCRITORIO*/
 @media (min-width: 700px) {
-  .carousel__text {
-    font-size: 2em;
+  .carousel__text--title {
+    font-size: 2.2em;
     margin: 0;
     padding: 0; }
   .carousel__text--prioridad {
-    font-size: 2em;
-    letter-spacing: 0.05em; } }
+    font-size: 2.4em;
+    letter-spacing: 0.05em; }
+  .carousel__text {
+    font-size: 1.2em; } }
 
 /*INDEX PRACTICAS MOBILE y escritorio*/
 .practicas {
