--- a/css/styles.css
+++ b/css/styles.css
@@ -359,7 +359,7 @@ label {
   width: 20em; }
 
 .contacto__btn {
-  background-color: #faef5b;
+  background-color: #ffe710;
   color: white;
   border-radius: 1em;
   border: none;
@@ -388,14 +388,14 @@ label {
 
 .contacto__redes a {
   text-decoration: none;
-  color: #faef5b;
+  color: #ffe710;
   text-shadow: 2px 2px 5px #807c7c;
   margin: 0.4em;
   padding: 0.5em; }
 
 .contacto__redes--title {
   text-transform: uppercase;
-  color: #faef5b;
+  color: #ffe710;
   text-shadow: 2px 2px 2px #807c7c; }
 
 .contacto__redes--text {
@@ -451,7 +451,7 @@ label {
 
 #submitBtn {
   margin: auto;
-  background-color: #faef5b;
+  background-color: #ffe710;
   color: white;
   font-family: "lato";
   text-transform: uppercase;
