--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,7 +6,7 @@
 
 
 /*VARIABLES*/
-$importantText: rgb(247, 225, 26);
+$importantText:#ffdf6c;
 $boxBackground:  #F2F1EF;
 $marble: url(../images/marble.jpg);
 
