--- a/scss/_headerfooter.scss
+++ b/scss/_headerfooter.scss
@@ -12,12 +12,12 @@
 .header__consulta {
   text-transform: uppercase;
  letter-spacing: 0.15em;
-  border: solid 0.2em rgb(245, 230, 95);
+  border: solid 0.2em $importantText;
   font-family: "Source Sans Pro", sans-serif;
  margin-left: 2em;
 }
 .header__btn {
-  background: rgb(245, 230, 95);
+  background: $importantText;
   border: none;
   color: white;
   font-weight: 600;
@@ -86,7 +86,7 @@ header {
 }
 
 .navbar-nav li a:hover {
-  background-color: rgb(245, 230, 95);
+  background-color: $importantText;
   color: white!important;
   border-radius: 0.5em;
   font-weight: 500;
@@ -101,9 +101,41 @@ footer {
   margin-top: 7em;
   margin: 1em;
   color:#ffffff;
-  background-color:  #202020;
-  background-repeat: none;
-  background-size: cover; }
+  background-image: url(/images/buildings2.jpeg);
+  background-size: cover;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0; }
+
+footer::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height:100%;
+  background-color:#202020;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: .9;
+  z-index: 0;
+}
+footer > * {
+  z-index: 10;
+  position: relative;
+}
+/*.footer__overlay {
+  background-image: url(../images/buildings.jpeg);
+  background-position: center;
+  background-size: cover;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  opacity: 0.5;
+  position: absolute;
+}*/
   footer .footer__item {
     font-size: 0.8em;
     margin-top: 2em;
@@ -121,22 +153,25 @@ footer {
     list-style: none;
     line-height: 2.4em;
     list-style-position:unset;
-    
+    color: white;
   }
   
   footer .footer__item--links li a {
     text-decoration: none;
-    color: black; }
+    color: white; }
   footer .footer__item--links li a:hover {
-    color: #ffdf6c;
-    border-bottom: solid #ffdf6c;
+    color: $importantText;
+    border-bottom: solid $importantText;
     padding-bottom: 0.3em; }
   footer .fa-twitter, footer .fa-instagram, footer .fa-linkedin, footer .fa-facebook {
     text-decoration: none;
-    color: black;
+    color: white;
     margin: 1em;
+    height: 2em;
    }
-
+.fa:hover {
+  color: $importantText;
+}
    .map {
      margin-bottom: 1.5em;
    }
