--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,6 +1,6 @@
 /*INDEX CAROUSEL MOBILE*/
 .carousel-item {
-  background-color:#777;
+  background-color:#202020;
   height: 15em;
   position: relative;
   color: white;
@@ -25,7 +25,7 @@
   left: 0;
   right: 0;
   top:0;
-  opacity: 0.5;
+  opacity: 0.2;
   background-position: center;
   background-size: cover;
 }
@@ -36,7 +36,7 @@
   left: 0;
   right: 0;
   top:0;
-  opacity: 0.5;
+  opacity: 0.2;
   background-position: center;
   background-size: cover;
 }
@@ -79,7 +79,7 @@ h3 {
   text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
 }
 h6 {
-  color: rgb(236, 217, 39);
+  color: $importantText;
   text-transform: uppercase;
   font-family: 'Source Serif Pro', serif;
   padding: 0.5em;
@@ -128,7 +128,7 @@ h6 {
   }
 }
 .practicas__btn {
-  @include buttons (rgb(250, 239, 91),white, none,0.5em,uppercase,600);
+  @include buttons ($importantText,white, none,0.5em,uppercase,600);
   text-decoration: none;
   padding: 0.3em;
   margin-top: 1.5em;
@@ -146,7 +146,7 @@ h6 {
 
 /*ABOUT US escritorio y mobile*/
 .aboutUs__foto {
-  background-color: #777;
+  background-color: #202020;
   background-position: center;
   background-size: cover;
   position: relative;
@@ -163,7 +163,7 @@ h6 {
   bottom: 0;
   right: 0;
   left: 0;
-  opacity: 0.5;
+  opacity: 0.3;
   position: absolute;
 }
 .aboutUs__textarea {
