cambios al footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,8 @@ footer {
   background-image: url(/images/buildings2.jpeg);
   background-size: cover;
   position: relative;
+  height: 30em;
+  width: 100 em;
   top: 0;
   bottom: 0;
   right: 0;
@@ -115,7 +117,7 @@ footer::after {
   position: absolute;
   top: 0;
   left: 0;
-  opacity: .9;
+  opacity: .2;
   z-index: 0; }
 
 footer > * {
