--- a/css/styles.css
+++ b/css/styles.css
@@ -98,11 +98,9 @@ footer {
   margin-top: 7em;
   margin: 1em;
   color: #ffffff;
-  background-image: url(/images/buildings2.jpeg);
+  background-image: url(../images/buildings2.jpeg);
   background-size: cover;
   position: relative;
-  height: 30em;
-  width: 100 em;
   top: 0;
   bottom: 0;
   right: 0;
@@ -117,7 +115,7 @@ footer::after {
   position: absolute;
   top: 0;
   left: 0;
-  opacity: .2;
+  opacity: .9;
   z-index: 0; }
 
 footer > * {
