--- a/scss/_headerfooter.scss
+++ b/scss/_headerfooter.scss
@@ -10,21 +10,19 @@
   padding: 0;
 }
 .header__consulta {
-  text-transform: uppercase;
- letter-spacing: 0.15em;
-  border: solid 0.2em $importantText;
-  font-family: "Source Sans Pro", sans-serif;
- margin-left: 2em;
+ display: flex;
+ justify-content: center;
 }
 .header__btn {
-  background: $importantText;
+  background: #25d366;
   border: none;
   color: white;
   font-weight: 600;
   text-transform: uppercase;
-  border-radius: 1em;
-  padding: 0.3em;
+  border-radius: 0.5em;
   margin-bottom: 1em;
+  width: 15em;
+  padding: 0.4em;
 }
 .navbar-nav li:hover {
   color: white!important;
@@ -94,6 +92,7 @@ header {
 .nav-link:hover {
   color:white;
 }
+
 }
 
 /*FOOTER*/
