--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 h4 {
   text-shadow: 1px 1px 2px black; }
 
@@ -22,6 +23,8 @@ h4 {
 
 .header__btn {
   background: #25d366;
+  font-family: "oswald", sans-serif;
+  letter-spacing: 0.05em;
   border: none;
   color: white;
   font-weight: 600;
