--- a/scss/_headerfooter.scss
+++ b/scss/_headerfooter.scss
@@ -15,6 +15,8 @@
 }
 .header__btn {
   background: #25d366;
+  font-family: "oswald", sans-serif;
+  letter-spacing: 0.05em;
   border: none;
   color: white;
   font-weight: 600;
