--- a/scss/_headerfooter.scss
+++ b/scss/_headerfooter.scss
@@ -14,7 +14,7 @@
  justify-content: center;
 }
 .header__btn {
-  background: #25d366;
+  background: #1abe56;
   font-family: "oswald", sans-serif;
   letter-spacing: 0.05em;
   border: none;
