--- a/scss/_profesionales.scss
+++ b/scss/_profesionales.scss
@@ -1,7 +1,7 @@
 
 /*PROFESIONALES*/
 .profesionales__title {
-   margin:0.5em;
+   margin:2em;
    text-align: center;
 }
 .profesionales__image {
@@ -12,7 +12,7 @@
    box-shadow:  3px 3px 10px rgb(241, 238, 238);
 }
 .profesionales__btn {
-   @include buttons (rgb(245, 230, 95),white, none,0.5em,uppercase,600);
+   @include buttons ($importantText,white, none,0.5em,uppercase,600);
    text-decoration: none;    
    padding: 0.3em;
    margin-top: 1.5em;
@@ -21,13 +21,14 @@
 }
 .profesionales__redes a {
    text-decoration: none;
-   background-color: rgb(245, 230, 95);
+   background-color: $importantText;
    color: white;
    margin: 0.2em;
    padding: 1em;
 }
 .profesionales__box {
    background-color: rgb(255, 251, 251);
+   margin: 1em;
    padding: 1em;
    border-radius: 0.5em;
    box-shadow:  3px 3px 10px rgb(241, 238, 238);
@@ -42,7 +43,7 @@
       text-align: center;
    }
    .profesionales__btn{
-      @include buttons (rgb(245, 230, 95),white, none,0.5em,uppercase,600)
+      @include buttons ($importantText,white, none,0.5em,uppercase,600)
    };
 }
 
